Bug fix: `#pointer` wasn't rendering properly on iOS in landscape at 5px scaled.

--- a/css/aa-mobile.css
+++ b/css/aa-mobile.css
@@ -783,7 +783,7 @@ body.game-over .joystick-point {
   margin: 0;
   position: absolute;
   top: 0;
-  --size: calc(5px * var(--gs));
+  --size: calc(6px * var(--gs));
   --halfSize: calc(var(--size) * -0.5);
   width: var(--size);
   height: var(--size);
